// Vitest Snapshot v1

exports[`html reporter > resolves to "failing" status for test file "json-fail" > tests are failing 1`] = `
[
  {
    "config": "3",
    "files": "2",
    "moduleGraph": "4",
    "paths": "1",
  },
  [],
  [
    "5",
  ],
  {
    "--": "17",
    "allowOnly": false,
    "cache": "26",
    "clearMocks": false,
    "color": true,
    "coverage": "14",
    "css": "13",
    "dangerouslyIgnoreUnhandledErrors": false,
    "defines": "20",
    "deps": "23",
    "environment": "6",
    "exclude": "8",
    "fakeTimers": "15",
    "forceRerunTriggers": "10",
    "globals": false,
    "hookTimeout": 10000,
    "include": "7",
    "isolate": true,
    "maxConcurrency": 5,
    "mockReset": false,
    "mode": "22",
    "open": true,
    "outputFile": "19",
    "reporter": "18",
    "reporters": "11",
    "restoreMocks": false,
    "root": "21",
    "run": true,
    "segfaultRetry": 0,
    "sequence": "27",
    "setupFiles": "25",
    "silent": false,
    "slowTestThreshold": 300,
    "snapshotOptions": "24",
    "teardownTimeout": 1000,
    "testTimeout": 5000,
    "threads": true,
    "typecheck": "16",
    "ui": false,
    "uiBase": "12",
    "update": false,
    "watch": false,
    "watchExclude": "9",
  },
  {
    "<rootDir>/test/reporters/fixtures/json-fail.test.ts": "28",
  },
  {
    "collectDuration": 16,
    "filepath": "33",
    "id": "29",
    "mode": "32",
    "name": "30",
    "result": "35",
    "setupDuration": 0,
    "tasks": "34",
    "type": "31",
  },
  "node",
  [
    "36",
  ],
  [
    "37",
    "38",
    "39",
    "40",
    "41",
  ],
  [
    "37",
    "38",
  ],
  [
    "42",
    "43",
  ],
  [
    "18",
  ],
  "/__vitest__/",
  {
    "include": "44",
    "modules": "45",
  },
  {
    "allowExternal": false,
    "clean": true,
    "cleanOnRerun": false,
    "enabled": false,
    "exclude": "48",
    "excludeNodeModules": true,
    "extension": "50",
    "provider": "46",
    "reporter": "49",
    "reportsDirectory": "47",
  },
  {
    "loopLimit": 10000,
    "shouldClearNativeTimers": true,
    "toFake": "51",
  },
  {
    "checker": "52",
    "exclude": "8",
    "include": "53",
  },
  [],
  "html",
  "html/fail/html-meta.json",
  {},
  "<rootDir>/test/reporters/fixtures",
  "test",
  {
    "inline": "54",
    "registerNodeLoader": false,
  },
  {
    "snapshotFormat": "55",
    "updateSnapshot": "56",
  },
  [],
  {
    "dir": "57",
  },
  {
    "hooks": "58",
  },
  {
    "externalized": "60",
    "graph": "59",
    "inlined": "61",
  },
  "997109584",
  "json-fail.test.ts",
  "suite",
  "run",
  "<rootDir>/test/reporters/fixtures/json-fail.test.ts",
  [
    "62",
  ],
  {
    "duration": 75,
    "hooks": "64",
    "startTime": 1671206297311,
    "state": "63",
  },
  "**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
  "**/node_modules/**",
  "**/dist/**",
  "**/cypress/**",
  "**/.{idea,git,cache,output,temp}/**",
  "**/{karma,rollup,webpack,vite,vitest,jest,ava,babel,nyc,cypress}.config.*",
  "**/package.json/**",
  "**/{vitest,vite}.config.*/**",
  [],
  {
    "classNameStrategy": "65",
  },
  "c8",
  "./coverage",
  [
    "66",
    "67",
    "68",
    "69",
    "70",
    "71",
    "72",
    "73",
    "74",
    "75",
    "41",
    "76",
  ],
  [
    "77",
    "18",
    "78",
    "79",
  ],
  [
    "80",
    "81",
    "82",
    "83",
    "84",
    "85",
    "86",
    "87",
    "88",
    "89",
  ],
  [
    "90",
    "91",
    "92",
    "93",
    "94",
    "95",
    "96",
  ],
  "tsc",
  [
    "97",
  ],
  [
    "98",
    "99",
    "100",
    "101",
    "102",
    "103",
    "104",
  ],
  {},
  "none",
  "<rootDir>/test/reporters/fixtures/node_modules/.vitest",
  "parallel",
  {
    "<rootDir>/test/reporters/fixtures/json-fail.test.ts": "105",
  },
  [],
  [
    "33",
  ],
  {
    "file": "5",
    "id": "106",
    "mode": "32",
    "name": "107",
    "result": "109",
    "suite": "108",
    "type": "22",
  },
  "fail",
  {
    "afterAll": "110",
    "beforeAll": "110",
  },
  "stable",
  "coverage/**",
  "dist/**",
  "packages/*/test{,s}/**",
  "**/*.d.ts",
  "cypress/**",
  "test{,s}/**",
  "test{,-*}.{js,cjs,mjs,ts,tsx,jsx}",
  "**/*{.,-}test.{js,cjs,mjs,ts,tsx,jsx}",
  "**/*{.,-}spec.{js,cjs,mjs,ts,tsx,jsx}",
  "**/__tests__/**",
  "**/.{eslint,mocha,prettier}rc.{js,cjs,yml}",
  "text",
  "clover",
  "json",
  ".js",
  ".cjs",
  ".mjs",
  ".ts",
  ".mts",
  ".cts",
  ".tsx",
  ".jsx",
  ".vue",
  ".svelte",
  "setTimeout",
  "clearTimeout",
  "setInterval",
  "clearInterval",
  "setImmediate",
  "clearImmediate",
  "Date",
  "**/*.{test,spec}-d.{ts,js}",
  {},
  {},
  {},
  {},
  {},
  {},
  "@nuxt/test-utils",
  [],
  "997109584_0",
  "should fail",
  {
    "file": "5",
    "id": "111",
    "mode": "32",
    "name": "111",
    "tasks": "112",
    "type": "31",
  },
  {
    "duration": 74,
    "error": "114",
    "hooks": "113",
    "retryCount": 0,
    "startTime": 1671206297312,
    "state": "63",
  },
  "pass",
  "",
  [
    "62",
  ],
  {
    "afterEach": "110",
    "beforeEach": "110",
  },
  {
    "actual": "116",
    "constructor": "121",
    "expected": "117",
    "message": "115",
    "name": "120",
    "nameStr": "120",
    "operator": "118",
    "showDiff": true,
    "stack": "119",
    "stackStr": "119",
    "toJSON": "122",
    "toString": "123",
  },
  "expected 2 to deeply equal 1",
  "2",
  "1",
  "strictEqual",
  "AssertionError: expected 2 to deeply equal 1
    at <rootDir>/test/reporters/fixtures/json-fail.test.ts:6:13
    at <rootDir>/packages/vitest/dist/chunk-runtime-chain.059f9429.js:2281:13
    at <rootDir>/packages/vitest/dist/chunk-runtime-chain.059f9429.js:2158:26
    at runTest (<rootDir>/packages/vitest/dist/chunk-runtime-setup.3ea54928.js:369:24)
    at runSuite (<rootDir>/packages/vitest/dist/chunk-runtime-setup.3ea54928.js:467:15)
    at runFiles (<rootDir>/packages/vitest/dist/chunk-runtime-setup.3ea54928.js:602:5)
    at startTestsNode (<rootDir>/packages/vitest/dist/chunk-runtime-setup.3ea54928.js:620:3)
    at <rootDir>/packages/vitest/dist/entry.js:75:11
    at Module.withEnv (<rootDir>/packages/vitest/dist/chunk-runtime-setup.3ea54928.js:157:5)
    at run (<rootDir>/packages/vitest/dist/entry.js:68:7)",
  "AssertionError",
  "Function<AssertionError>",
  "Function<>",
  "Function<toString>",
]
`;

exports[`html reporter > resolves to "passing" status for test file "all-passing-or-skipped" > tests are passing 1`] = `
[
  {
    "config": "3",
    "files": "2",
    "moduleGraph": "4",
    "paths": "1",
  },
  [],
  [
    "5",
  ],
  {
    "--": "17",
    "allowOnly": false,
    "cache": "26",
    "clearMocks": false,
    "color": true,
    "coverage": "14",
    "css": "13",
    "dangerouslyIgnoreUnhandledErrors": false,
    "defines": "20",
    "deps": "23",
    "environment": "6",
    "exclude": "8",
    "fakeTimers": "15",
    "forceRerunTriggers": "10",
    "globals": false,
    "hookTimeout": 10000,
    "include": "7",
    "isolate": true,
    "maxConcurrency": 5,
    "mockReset": false,
    "mode": "22",
    "open": true,
    "outputFile": "19",
    "reporter": "18",
    "reporters": "11",
    "restoreMocks": false,
    "root": "21",
    "run": true,
    "segfaultRetry": 0,
    "sequence": "27",
    "setupFiles": "25",
    "silent": false,
    "slowTestThreshold": 300,
    "snapshotOptions": "24",
    "teardownTimeout": 1000,
    "testTimeout": 5000,
    "threads": true,
    "typecheck": "16",
    "ui": false,
    "uiBase": "12",
    "update": false,
    "watch": false,
    "watchExclude": "9",
  },
  {
    "<rootDir>/test/reporters/fixtures/all-passing-or-skipped.test.ts": "28",
  },
  {
    "collectDuration": 16,
    "filepath": "33",
    "id": "29",
    "mode": "32",
    "name": "30",
    "result": "35",
    "setupDuration": 0,
    "tasks": "34",
    "type": "31",
  },
  "node",
  [
    "36",
  ],
  [
    "37",
    "38",
    "39",
    "40",
    "41",
  ],
  [
    "37",
    "38",
  ],
  [
    "42",
    "43",
  ],
  [
    "18",
  ],
  "/__vitest__/",
  {
    "include": "44",
    "modules": "45",
  },
  {
    "allowExternal": false,
    "clean": true,
    "cleanOnRerun": false,
    "enabled": false,
    "exclude": "48",
    "excludeNodeModules": true,
    "extension": "50",
    "provider": "46",
    "reporter": "49",
    "reportsDirectory": "47",
  },
  {
    "loopLimit": 10000,
    "shouldClearNativeTimers": true,
    "toFake": "51",
  },
  {
    "checker": "52",
    "exclude": "8",
    "include": "53",
  },
  [],
  "html",
  "html/all-passing-or-skipped/html-meta.json",
  {},
  "<rootDir>/test/reporters/fixtures",
  "test",
  {
    "inline": "54",
    "registerNodeLoader": false,
  },
  {
    "snapshotFormat": "55",
    "updateSnapshot": "56",
  },
  [],
  {
    "dir": "57",
  },
  {
    "hooks": "58",
  },
  {
    "externalized": "60",
    "graph": "59",
    "inlined": "61",
  },
  "1111755131",
  "all-passing-or-skipped.test.ts",
  "suite",
  "run",
  "<rootDir>/test/reporters/fixtures/all-passing-or-skipped.test.ts",
  [
    "62",
    "63",
  ],
  {
    "duration": 1,
    "hooks": "65",
    "startTime": 1671206296163,
    "state": "64",
  },
  "**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
  "**/node_modules/**",
  "**/dist/**",
  "**/cypress/**",
  "**/.{idea,git,cache,output,temp}/**",
  "**/{karma,rollup,webpack,vite,vitest,jest,ava,babel,nyc,cypress}.config.*",
  "**/package.json/**",
  "**/{vitest,vite}.config.*/**",
  [],
  {
    "classNameStrategy": "66",
  },
  "c8",
  "./coverage",
  [
    "67",
    "68",
    "69",
    "70",
    "71",
    "72",
    "73",
    "74",
    "75",
    "76",
    "41",
    "77",
  ],
  [
    "78",
    "18",
    "79",
    "80",
  ],
  [
    "81",
    "82",
    "83",
    "84",
    "85",
    "86",
    "87",
    "88",
    "89",
    "90",
  ],
  [
    "91",
    "92",
    "93",
    "94",
    "95",
    "96",
    "97",
  ],
  "tsc",
  [
    "98",
  ],
  [
    "99",
    "100",
    "101",
    "102",
    "103",
    "104",
    "105",
  ],
  {},
  "none",
  "<rootDir>/test/reporters/fixtures/node_modules/.vitest",
  "parallel",
  {
    "<rootDir>/test/reporters/fixtures/all-passing-or-skipped.test.ts": "106",
  },
  [],
  [
    "33",
  ],
  {
    "file": "5",
    "id": "107",
    "mode": "32",
    "name": "108",
    "result": "110",
    "suite": "109",
    "type": "22",
  },
  {
    "file": "5",
    "id": "111",
    "mode": "113",
    "name": "112",
    "suite": "109",
    "type": "22",
  },
  "pass",
  {
    "afterAll": "64",
    "beforeAll": "64",
  },
  "stable",
  "coverage/**",
  "dist/**",
  "packages/*/test{,s}/**",
  "**/*.d.ts",
  "cypress/**",
  "test{,s}/**",
  "test{,-*}.{js,cjs,mjs,ts,tsx,jsx}",
  "**/*{.,-}test.{js,cjs,mjs,ts,tsx,jsx}",
  "**/*{.,-}spec.{js,cjs,mjs,ts,tsx,jsx}",
  "**/__tests__/**",
  "**/.{eslint,mocha,prettier}rc.{js,cjs,yml}",
  "text",
  "clover",
  "json",
  ".js",
  ".cjs",
  ".mjs",
  ".ts",
  ".mts",
  ".cts",
  ".tsx",
  ".jsx",
  ".vue",
  ".svelte",
  "setTimeout",
  "clearTimeout",
  "setInterval",
  "clearInterval",
  "setImmediate",
  "clearImmediate",
  "Date",
  "**/*.{test,spec}-d.{ts,js}",
  {},
  {},
  {},
  {},
  {},
  {},
  "@nuxt/test-utils",
  [],
  "1111755131_0",
  "2 + 3 = 5",
  {
    "file": "5",
    "id": "114",
    "mode": "32",
    "name": "114",
    "tasks": "115",
    "type": "31",
  },
  {
    "duration": 1,
    "hooks": "116",
    "retryCount": 0,
    "startTime": 1671206296163,
    "state": "64",
  },
  "1111755131_1",
  "3 + 3 = 6",
  "skip",
  "",
  [
    "62",
    "63",
  ],
  {
    "afterEach": "64",
    "beforeEach": "64",
  },
]
`;
